syntax = "proto3";

option csharp_namespace = "Mercury.Engine.API.Services.GrpcGenerated";

import "system/group.proto";

package chat_group;

service ChatGroup{
    rpc Create (CreateRequest) returns (CreateReply);
    rpc GetGroupsByUser (GetGroupsByUserRequest) returns (stream GetGroupsByUserReply);
}

message CreateRequest{
    repeated int32 usersId = 1;
    string groupName = 2;
}

message CreateReply {
    int32 groupId = 1;
 }

 message GetGroupsByUserRequest {
     int32 userId = 1;
 }

 message GetGroupsByUserReply {
     system.Group group = 1;
 }



